Mode todo outisde models

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -8,9 +8,10 @@ schema:
 exec:
   filename: generated.go
 model:
+  filename: models_gen.go
+models:
   Todo:
     model: github.com/laurensiusadi/gqlgen-todos/models.Todo
-    filename: models_gen.go
 resolver:
   filename: resolver.go
   type: Resolver
